--- a/Digital_Diary/App.config
+++ b/Digital_Diary/App.config
@@ -5,6 +5,6 @@
 	</startup>
 	<connectionStrings>
 		<add name="Users" providerName="System.Data.SqlClient" connectionString="server=.\sqlexpress;database=OOP2;integrated security=true;"/>
-		<add name="Events" providerName="System.Data.SqlClient" connectionString="server=.\sqlexpress;database=OOP2;integrated security=true;"/>
+		<add name="Event" providerName="System.Data.SqlClient" connectionString="server=.\sqlexpress;database=OOP2;integrated security=true;"/>
 	</connectionStrings>
 </configuration>
